deploy/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: textannoviz
spec:
  selector:
    app: textannoviz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
